summative.moria.Moria.scala.error
Compilation error:
Moria:4: error: not found: value Direction
  setDirection(Direction.EST)
               ^Moria:48: error: not found: value Direction
  setDirection(Direction.EST)
               ^Moria:77: error: not found: value Direction
  setDirection(Direction.EST)
               ^